# openairinterface5g

./: .gitignore  README.md
auto-scripts/OAI/BucketSketch/: CMakeLists.txt
auto-scripts/OAI/BucketSketch/data/: README.md
auto-scripts/OAI/BucketSketch/data/onlineTraceData/iot/: iot_1.pkts  iot_111.pkts  iot_12.pkts  iot_13.pkts  iot_131.pkts  iot_144.pkts  iot_145.pkts  iot_148.pkts  iot_151.pkts  iot_160.pkts  iot_163.pkts  iot_165.pkts  iot_168.pkts  iot_169.pkts  iot_170.pkts  iot_171.pkts  iot_173.pkts  iot_175.pkts  iot_180.pkts  iot_181.pkts  iot_183.pkts  iot_2.pkts  iot_20.pkts  iot_21.pkts  iot_24.pkts  iot_27.pkts  iot_3.pkts  iot_32.pkts  iot_33.pkts  iot_37.pkts  iot_39.pkts  iot_40.pkts  iot_41.pkts  iot_42.pkts  iot_44.pkts  iot_45.pkts  iot_5.pkts  iot_51.pkts  iot_56.pkts  iot_60.pkts  (+3 more)
auto-scripts/OAI/BucketSketch/data/onlineTraceData/video/: video_11.pkts  video_14.pkts  video_16.pkts  video_17.pkts  video_2.pkts  video_22.pkts  video_26.pkts  video_30.pkts  video_31.pkts  video_33.pkts  video_34.pkts  video_35.pkts  video_38.pkts  video_39.pkts  video_41.pkts  video_44.pkts  video_47.pkts  video_49.pkts  video_51.pkts  video_53.pkts  video_54.pkts  video_55.pkts  video_56.pkts  video_7.pkts
auto-scripts/OAI/BucketSketch/data/onlineTraceData/voip/: voip_0.pkts  voip_1.pkts  voip_100.pkts  voip_102.pkts  voip_103.pkts  voip_104.pkts  voip_107.pkts  voip_11.pkts  voip_112.pkts  voip_113.pkts  voip_115.pkts  voip_116.pkts  voip_12.pkts  voip_17.pkts  voip_19.pkts  voip_20.pkts  voip_24.pkts  (+38 more)
auto-scripts/OAI/BucketSketch/src/CPU/: main.cpp
(+253 files in other folders)
